General fixes
Fixed issues:

Content overflowing on footer in the manage panel when there was several posts created.

Increased size of images on blog posts when opening specific blog posts to read more.

Changed color of slider to fit better with the actual logo of GamerBlog.

Redirecting user back to manage panel when blog post has been created.

--- a/css/blogPost.css
+++ b/css/blogPost.css
@@ -6,7 +6,7 @@ h1 {
 
 #postImage,
 #post-img {
-  width: 500px;
+  width: 700px;
   height: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 50px;
