--- a/css/slider.css
+++ b/css/slider.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   display: flex;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 #slider-wrapper {
